ecmascript/parser/tests/test262-error-references/fail/a20584c5a6110526.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/a20584c5a6110526.js:1:1
  |
1 | import { class, var } from 'foo'
  | ^^^^^^

